scroll animation fix

--- a/style.scss
+++ b/style.scss
@@ -43,7 +43,7 @@ $gray: #444;
 
 body {
   background-color: black;
-  font-family: 'Noto Sans KR', 'Helvetica';
+  font-family: 'Norwester', 'Noto Sans KR', 'Helvetica', sans-serif;
   color: white;
 
 }
